# morphio

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .repo_ignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
morphio-core/: CLAUDE.md  LICENSE  README.md  pyproject.toml
morphio-core/benchmarks/: __init__.py  test_benchmarks.py
morphio-core/src/morphio_core/: __init__.py  exceptions.py
morphio-core/src/morphio_core/audio/: __init__.py  alignment.py  chunking.py  transcription.py  types.py
morphio-core/src/morphio_core/cli/: __init__.py  main.py
morphio-core/src/morphio_core/llm/: __init__.py  parsing.py  router.py  types.py
morphio-core/src/morphio_core/llm/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai.py
morphio-core/src/morphio_core/media/: __init__.py  ffmpeg.py
morphio-core/src/morphio_core/security/: __init__.py  anonymizer.py  types.py  url_validator.py
morphio-core/src/morphio_core/video/: __init__.py  download.py  types.py  url_utils.py
morphio-core/tests/: __init__.py  conftest.py  test_audio.py  test_ffmpeg.py  test_integration_mps.py  test_llm.py  test_security.py  test_video.py
morphio-io/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.crawler  Dockerfile.dev  Dockerfile.worker-ml  README.md  alembic.ini  docker-entrypoint.dev.sh  docker-entrypoint.sh  pyproject.toml
morphio-io/backend/.claude/: settings.local.json
morphio-io/backend/app/: config.py  database.py  dependencies.py  main.py
morphio-io/backend/app/adapters/: __init__.py  anonymizer.py  audio.py  base.py  llm.py  media.py  speaker_alignment.py  url_validation.py  video.py
morphio-io/backend/app/middlewares/: __init__.py  content.py  csrf.py  metrics.py  security.py  security_logging.py
morphio-io/backend/app/models/: __init__.py  api_key.py  base.py  comment.py  content.py  conversation.py  llm_usage.py  quota_tier.py  subscription.py  tag.py  template.py  usage.py  user.py
morphio-io/backend/app/routes/: admin.py  api_keys.py  billing.py  docs.py  health.py  logs.py  media.py  metrics.py  template.py  upload.py  user.py  web.py  ws.py
morphio-io/backend/app/routes/admin/: __init__.py  health.py  usage.py
morphio-io/backend/app/routes/auth/: __init__.py  login.py  registration.py  token.py
morphio-io/backend/app/routes/content/: __init__.py  comments.py  conversations.py  crud.py  dependencies.py
morphio-io/backend/app/schemas/: audio_schema.py  auth_schema.py  cache_schema.py  comment_schema.py  content_schema.py  conversation_schema.py  diarization_schema.py  error_schema.py  file_schema.py  job_schema.py  logs_schema.py  media_schema.py  rate_limit_schema.py  response_schema.py  security_schema.py  subscription_schema.py  system_health_schema.py  tag_schema.py  template_schema.py  user_schema.py
morphio-io/backend/app/services/: video_service.py
morphio-io/backend/app/services/audio/: __init__.py  chunking.py  diarization.py  (+4 more)
morphio-io/backend/app/utils/: __init__.py  alembic_utils.py  anonymizer.py  cache_utils.py  create_admin.py  database_utils.py  decorators.py  enums.py  error_handlers.py  file_utils.py  helpers.py  job_utils.py  json_cache.py  log_context.py  logging_config.py  response_utils.py  route_helpers.py  security_logger.py  transcription_utils.py  types.py  youtube_utils.py
morphio-io/backend/crawler/: main.py
morphio-io/backend/db/: env.py
morphio-io/backend/db/versions/: 20250213120000_add_usage_and_subscription.py  20250918090000_add_content_conversations.py  20250918090500_merge_conversation_heads.py  20251223_add_billing_and_api_keys.py  20251223_add_llm_usage_records.py  20251231_add_usage_indexes.py  20251231_fix_contents_template_id_type.py  5c41813cd26c_add_template_id_to_contents.py  785dd16b8d94_initial_migration.py  aaaa_add_usage_type_credits.py
morphio-io/backend/docs/: README.md  deployment-docs.md
morphio-io/backend/docs/app-docs/: auth-docs.md  config-docs.md  models-docs.md  routes-docs.md  schemas-docs.md  utils-docs.md
morphio-io/backend/docs/test-docs/: testing-docs.md
morphio-io/backend/schemas/: media_schema.py
morphio-io/backend/scripts/: README.md  __init__.py  analyze_security_logs.py  create_admin.py  db_backup.sh  db_restore.sh  export_openapi.py  purge_empty_titles.py  reset_password.py
morphio-io/backend/templates/: blog-post.json  dont-have-the-time.json  email-newsletter.json  episode-synopsis.json  facebook-post.json  formatted-markdown.json  instagram-caption.json  just-the-gist.json  lecture-notes.json  linkedin-post.json  log-summary.json  meeting-notes.json  podcast-notes.json  press-release.json  product-description.json  quora-answer.json  recipe.json  sermon-wisdom.json  splunk-config.json  top-tips.json  x-thread.json
morphio-io/backend/tests/: conftest.py
morphio-io/backend/tests/functional/: test_audio_service.py  test_authentication.py  test_caching.py  test_credits_gating.py
morphio-io/backend/tests/integration/: test_admin_health_dashboard.py  test_billing_webhook.py  test_content_conversation.py  test_content_crud.py  test_logs_config_and_upload.py  test_logs_routes.py  test_logs_stage_progress_updates.py  test_rate_limit_request_injection.py  test_security_csrf.py  test_template_cache.py  test_user_credits_flow.py  test_worker_ml_and_crawler.py
morphio-io/backend/tests/performance/: benchmark_whisper.py
morphio-io/backend/tests/unit/: test_adapters.py  test_authorization.py  test_config_production_secrets.py  test_diarization.py  test_generation_core.py  test_health.py  test_json_cache.py  test_llm_usage_tracking.py  test_quota_tier_model.py  test_speaker_alignment.py  test_stage_progression.py  test_usage_credits_aggregate.py  test_worker_ml_model_cache.py
morphio-io/backend/worker_ml/: main.py  model_cache.py
morphio-native/: Cargo.toml  pyproject.toml
morphio-native/python/morphio_native/: __init__.py  __init__.pyi
morphio-native/src/: alignment.rs  anonymizer.rs  lib.rs  types.rs
(+275 files in other folders)
