[project]
name = "morphio-all"
version = "0.0.0"
description = "Morphio monorepo workspace"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "morphio-backend",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "pytest-benchmark>=4.0",
    "coverage>=7.0.0",
    "ruff>=0.8.0",
    "ty>=0.0.20",
    "pygments>=2.0.0",
    "maturin>=1.7,<2.0",  # Rust extension build tool
    "pre-commit>=3.6.0",  # Git hooks framework
]

[tool.uv.workspace]
members = ["morphio-core", "morphio-io/backend", "morphio-native"]

[tool.uv.sources]
morphio-backend = { workspace = true }
morphio-native = { workspace = true }
morphio-core = { workspace = true }
