[project]
name = "morphio-all"
version = "0.0.0"
description = "Morphio monorepo workspace"
requires-python = ">=3.14"
license = "MIT"
dependencies = [
    "morphio-backend",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-benchmark>=4.0",
    "coverage>=7.13.4",
    "ruff>=0.15.5",
    "ty>=0.0.21",
    "pygments>=2.19.2",
    "maturin>=1.12.6,<2.0",  # Rust extension build tool
    "pre-commit>=4.5.1",  # Git hooks framework
]

[tool.uv.workspace]
members = ["morphio-core", "morphio-io/backend", "morphio-native"]

[tool.uv.sources]
morphio-backend = { workspace = true }
morphio-native = { workspace = true }
morphio-core = { workspace = true }
