[project]
name = "morphio-all"
version = "0.0.0"
description = "Morphio monorepo workspace"
requires-python = ">=3.14"
license = "MIT"
dependencies = [
    "morphio-backend",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-benchmark>=5.2.3",
    "coverage>=7.13.5",
    "ruff>=0.15.12",
    "ty>=0.0.32",
    "pygments>=2.20.0",
    "maturin>=1.13.1,<2.0",  # Rust extension build tool
    "pre-commit>=4.6.0",  # Git hooks framework
]

[tool.uv.workspace]
members = ["morphio-core", "morphio-io/backend", "morphio-native"]

[tool.uv.sources]
morphio-backend = { workspace = true }
morphio-native = { workspace = true }
morphio-core = { workspace = true }
