[package]
name = "morphio_native"
version = "0.1.0"
edition = "2021"
rust-version = "1.93"
license = "MIT"

[lib]
name = "morphio_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["auto-initialize"] }
regex = "1.12"
intervaltree = "0.2.7"
ahash = "0.8.12"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
thiserror = "2.0.18"

[dev-dependencies]
# Rust tests only - Python benchmarks use pytest-benchmark

[profile.release]
lto = true
codegen-units = 1
strip = true
