[project]
name = "morphio-native"
version = "0.1.0"
description = "Rust-native performance extensions for morphio"
requires-python = ">=3.13"
license = "MIT"

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "morphio_native._native"

[dependency-groups]
dev = ["pytest-benchmark>=4.0"]
