[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "morphio-backend"
version = "0.1.0"
description = "Morphio FastAPI backend"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [{ name = "Morphio Team" }]
# Minimal core dependencies - each service adds what it needs via dependency-groups
dependencies = [
  # Shared core library (local path dependency)
  "morphio-core",

  # Core FastAPI stack
  "aiofiles",
  "aiosqlite",
  "alembic",
  "anthropic",
  "bcrypt",
  "email-validator",
  "fastapi",
  "openai",
  "httpx",
  "stripe",
  "tenacity",

  # Database / async
  "asyncpg",
  "sqlalchemy",
  "greenlet",

  # Web / security / settings
  "python-multipart",
  "passlib",
  "pydantic",
  "pydantic-settings",
  "pyjwt",
  "python-dotenv",
  "redis",
  "slowapi",
  "uvicorn",
  "uvloop",
  "httptools",

  # Media utils (lightweight, needed by backend for yt-dlp/ffmpeg orchestration)
  "youtube-transcript-api",
  "yt-dlp",
  "pydub",
  "moviepy",

  # Video summarization (API-based, lightweight)
  "google-genai>=1.0.0",
  "scenedetect[opencv]>=0.6",
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "ruff",
  "ty>=0.0.4",
]

# Crawler service - only needs playwright for web scraping
crawler = [
  "playwright",
]

# ML worker service - heavy ML dependencies
ml = [
  "torch",
  "torchaudio",
  "torchvision",
  "openai-whisper",
  "pyannote-audio>=3.1.0",
  "numba>=0.60.0",  # Override stale transitive dep; 0.60+ supports Python 3.13
  "llvmlite>=0.43.0",  # Required by numba 0.60+
]

# Apple Silicon local dev only (not used in Docker)
ml-apple = [
  "mlx-whisper",
]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [
  ".venv",
  "venv",
  "../frontend",
  "docs/_build",
  "dist",
  "build",
  "uploads",
  "log_files",
  "db/versions",
  "db/script.py.mako",
]

[tool.ruff.lint]
select = ["E", "F"]
# Narrow ignores; enforce import hygiene (F401) and forbid wildcard imports (F403)
ignore = ["E203", "E402", "E501"]

[tool.ruff.lint.per-file-ignores]
"app/models/__init__.py" = ["E501"]
"app/services/audio_service.py" = ["E501"]
"app/services/template_service.py" = ["E501"]

[tool.uv]
package = false

[tool.uv.sources]
morphio-core = { path = "../../morphio-core", editable = true }

[tool.ty]
# Note: worker_ml excluded via --exclude flag in Makefile
# (requires Linux/CUDA-specific ML deps not available on macOS)

[tool.ty.environment]
python-version = "3.13"

[tool.pytest.ini_options]
pythonpath = "."
python_files = "test_*.py"
testpaths = ["tests"]
addopts = "-v"
asyncio_mode = "auto"
# Equivalent to [pytest_asyncio] loop_scope=function
asyncio_default_fixture_loop_scope = "function"
markers = [
    "timeout: marks tests with a timeout (deferred to pytest-timeout plugin if installed)",
]

# (No extra indexes; rely on PyPI wheels for torch stack)
